--- a/src/css/Browse.css
+++ b/src/css/Browse.css
@@ -27,13 +27,6 @@ video {
     display: flex;
     line-height: 50px;
 }
-/* .logo {
-    color: red;
-    margin-right: 40px;
-    font-size: 28px;
-    font-weight: 900;
-    line-height: 36px;
-} */
 .NETFLIX {
     width: 120px;
     margin-right: 40px;
@@ -50,12 +43,10 @@ video {
     display: flex;
     color: white;
 }
-.nav-item {
+.nav-item > a {
     padding: 0 10px;
     font-size: 14px;
     margin: auto;
-}
-.nav-item > a {
     color: white;
 }
 .menu {
@@ -68,12 +59,17 @@ video {
     font-size: 18px;
     padding: 0 15px;
     margin: auto;
+    vertical-align: middle;
+}
+.menu-item > a > i {
+    vertical-align: middle;
 }
 .rabbit {
     width: 30px;
     height: 30px;
     border-radius: 3px;
     margin: auto;
+    vertical-align: middle;
 }
 .menu-open-icon {
     font-size: 13px;
@@ -90,13 +86,18 @@ video {
 .top2msg {
     vertical-align: middle;
 }
-/* .title {
-    font-size: 72px;
-} */
+.title > img {
+    width: 625px;
+    height: 250px;
+}
 .badge {
     font-size: 25px;
     font-weight: 900;
     padding: 15px 0;
+}
+.badge > img {
+    width:37px;
+    height: 37px;
 }
 .description {
     width: 40%;
