--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,11 +1,45 @@
 body {
-    background-image: url(https://assets.nflxext.com/ffe/siteui/vlv3/5fd505fa-f425-4a18-b3cc-00dd2638f541/9919b42b-9d37-4726-ab59-1df43235c4f1/KR-ko-20220704-popsignuptwoweeks-perspective_alpha_website_large.jpg);
-    color: #fff;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://assets.nflxext.com/ffe/siteui/vlv3/5fd505fa-f425-4a18-b3cc-00dd2638f541/9919b42b-9d37-4726-ab59-1df43235c4f1/KR-ko-20220704-popsignuptwoweeks-perspective_alpha_website_large.jpg);
+    /* background-color: rgba(0, 0, 0, 0.5); */
+    /*
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
-    line-height: 1;
-    filter: brightness(80%);
+    */
+    /* filter: brightness(70%); */
+    /* background-blend-mode: darken; */
+    color: #fff;
+    line-height: 1; 
+}
+
+body::before{
+
+    /* background-image: url(https://assets.nflxext.com/ffe/siteui/vlv3/5fd505fa-f425-4a18-b3cc-00dd2638f541/9919b42b-9d37-4726-ab59-1df43235c4f1/KR-ko-20220704-popsignuptwoweeks-perspective_alpha_website_large.jpg);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
+    opacity: 0.5;
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px; */
+
+    /* content: "";
+    opacity: 0.5;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-color: #000; */
+}
+
+.errorMessageWrap {
+    margin: 15px 5px;
+    margin-top: -8px;
+    font-size: 11px;
+    color: rgb(255, 123, 0);
 }
 
 #netflex-login-logo {
@@ -65,6 +99,13 @@ body {
     width: 100%;
     background-color: #e50914;
     margin-top: 1.5rem;
+    cursor: pointer;
+}
+
+.bottomButton:disabled {
+    background-color: #dadada;
+    color: white;
+    cursor: default;
 }
 
 .login-guid-text,
