왜 아무 이상없는데 이유없이 지웠다 저장하고 다시 복구해서 저장하면 기능이 동작할까? (Intro 부분의 탭누르는부분)

--- a/src/css/Browse.css
+++ b/src/css/Browse.css
@@ -100,13 +100,13 @@ video {
 .title > img {
     width: 625px;
     height: 250px;
-    transition: 1.5s;
-    transform: scale(0.5);
+    /* transition: 2.0s;
+    transform: scale(0.5); */
 }
 .title-small {
-    /* margin-top: 250px;
+    margin-top: 250px;
     width: 312px;
-    height: 125px; */
+    height: 125px;
 }
 .badge {
     font-size: 25px;
